# CMakeList.txt : CMake project for Octree, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (Demo "App.cpp" "App.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Octree PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
target_link_libraries(Demo Octree Utility)